import from common role

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,18 +1,18 @@
 galaxy_info:
   author: Sean Ho
-  description: Template ansible role
+  description: Convenience config for text editor
   company: Anchorlytics Consulting
   license: MIT
 
   min_ansible_version: 1.2
 
   platforms:
-   - name: Debian
-     versions:
-     - stable
-     - 10
+  - name: Debian
+    versions:
+    - stable
+    - 10
 
   galaxy_tags:
-    - template
+  - template
 
 dependencies: []
